view handler fix
Signed-off-by: Jakub Amanowicz <jakub.amanowicz@here.com>